
-"Whale alert" notice for price alerts (does NOT affect parameters you set for triggering alerts, 
just adds "Whale Alert" text or emoji if asset alert(s) fall within 5% price change within half a day or less,
and pair volume has changed at least 20% with minimum currency volume of 10,000)

IMPORTANT NOTES: 

v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

v4.04.3 and higher of this app RESETS PRICE ALERT VOLUME STORED TO USE PAIRING VOLUME INSTEAD 
OF ASSET VOLUME, SO !FIRST! PRICE ALERTS AFTER UPGRADING WILL HAVE INCORRECT VOLUME CHANGE 
PERCENTAGES (BUT WILL BE ACCURATE AFTERWARDS).

v4.03.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------



-------------------------------------------------------------------
4.07.0:

-More directory structure cleanup

IMPORTANT NOTES: 

v4.06.0 and higher modularizes the configuration settings into the new $app_config array. ALL
CONFIGURATION SETTING VARIABLE NAMES ARE NOW DIFFERENT, USE THE LATEST/UPGRADED CONFIG.PHP,
AND MIGRATE YOUR EXISTING SETTINGS TO THE NEW FORMAT.

v4.04.3 and higher of this app RESETS PRICE ALERT VOLUME STORED TO USE PAIRING VOLUME INSTEAD 
OF ASSET VOLUME, SO !FIRST! PRICE ALERTS AFTER UPGRADING WILL HAVE INCORRECT VOLUME CHANGE 
PERCENTAGES (BUT WILL BE ACCURATE AFTERWARDS).

v4.03.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.

-------------------------------------------------------------------






